# XEngram

./: .gitignore  404.html  AlterNote.sln  AlterNote.styles.css  Cargo.toml  Makefile.toml  XEngram.sln  service-worker-assets.js  service-worker.js
$DESTINATION_DIR/: XEngram-da84c0efbcd674c.js
.github/sync_settings/: sync_files.yml
.github/workflows/: deploy.yml  deploy_bata.yml  deploy_beta.yml  deploy_main.yml  deploy_nightly.yml  deploy_release.yml  publish.yml  sync.yml  test.yml
_framework/: AlterNote.dll.br  System.Private.CoreLib.dll.br  System.Runtime.dll.br  XEngram.dll.br  blazor.boot.json  blazor.boot.json.br
beta/: XEngram-da84c0efbcd674c_bg.wasm  index.html
nightly/: index.html  xengram-2b5ca0d68570404e.js  xengram-2b5ca0d68570404e_bg.wasm  xengram-ac11bfc7fec85d92.js  xengram-ac11bfc7fec85d92_bg.wasm  xengram-ee20d32cfe52c3d1.js  xengram-ee20d32cfe52c3d1_bg.wasm  xengram-ff37ebd71007d270.js  xengram-ff37ebd71007d270_bg.wasm
public/: index.css
release/: XEngram.styles.css  index.html  manifest.json  service-worker-assets.js  service-worker.js
release/_framework/: blazor.boot.json  blazor.boot.json.br
src/: main.rs
src/AlterNote/: AlterNote.csproj  Program.cs  _Imports.razor
src/AlterNote/Pages/: Index.razor
src/AlterNote/Properties/: launchSettings.json
src/XEngram/: App.razor  Program.cs  _Imports.razor
src/pages/: index.rs
xengram/: Cargo.toml  index.html
xengram/src/: common.rs  lib.rs  main.rs  pages.rs  route.rs
xengram/src/pages/: index.rs  mod.rs  not_found.rs
xengram_internal_generator/: Cargo.toml
(+10 files in other folders)
