[package]
name = "xengram"
version = "0.0.0-nightly.0"
authors = ["maemon4095"]
edition = "2021"

[dependencies]
seed = "0.8"
serde = "1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1", features = ["serde-1"] }
enclose = "1"
wasm-bindgen = "=0.2.74"
